--- a/sass/_page-portfolio.scss
+++ b/sass/_page-portfolio.scss
@@ -122,7 +122,7 @@ li {
 }
 
 article {
-	margin-bottom: 45px;
+	margin-bottom: 1em;
 	padding-bottom: 35px;
 	border-bottom: 1px dotted #e0e0e0;
 }
@@ -136,8 +136,18 @@ article.last {border: none; margin-bottom: 0; padding-bottom: 20px;}
 	border-radius: 5px;
 }
 
+.item-title {text-align:center;}
+
+article .flex-container, .vodafone-desktop-usability .bordered-img {
+	margin: 2em auto;
+}
+
 .flex-direction-nav {display: none;}
 .no-touch .flex-direction-nav {display: block;}
+
+.vodafone-mobile .flex-container {
+	max-width:640px;
+}
 
 .button {
 	display: block;
