--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -392,7 +392,7 @@ img {
 
 /* line 49, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-3.2.3/scss/foundation/components/_grid.scss */
 #map_canvas img, .map_canvas img {
-  max-width: none!important;
+  max-width: none !important;
 }
 
 /* Nicolas Gallagher's micro clearfix */
@@ -2694,7 +2694,7 @@ li span {
 
 /* line 124, ../sass/_page-portfolio.scss */
 article {
-  margin-bottom: 45px;
+  margin-bottom: 1em;
   padding-bottom: 35px;
   border-bottom: 1px dotted #e0e0e0;
 }
@@ -2716,16 +2716,31 @@ article.last {
 }
 
 /* line 139, ../sass/_page-portfolio.scss */
+.item-title {
+  text-align: center;
+}
+
+/* line 141, ../sass/_page-portfolio.scss */
+article .flex-container, .vodafone-desktop-usability .bordered-img {
+  margin: 2em auto;
+}
+
+/* line 145, ../sass/_page-portfolio.scss */
 .flex-direction-nav {
   display: none;
 }
 
-/* line 140, ../sass/_page-portfolio.scss */
+/* line 146, ../sass/_page-portfolio.scss */
 .no-touch .flex-direction-nav {
   display: block;
 }
 
-/* line 142, ../sass/_page-portfolio.scss */
+/* line 148, ../sass/_page-portfolio.scss */
+.vodafone-mobile .flex-container {
+  max-width: 640px;
+}
+
+/* line 152, ../sass/_page-portfolio.scss */
 .button {
   display: block;
   background-color: #f7f7f7;
@@ -2744,7 +2759,7 @@ article.last {
   box-shadow: 0px 2px 6px rgba(170, 170, 170, 0.68), inset 0px 2px 3px white;
 }
 
-/* line 160, ../sass/_page-portfolio.scss */
+/* line 170, ../sass/_page-portfolio.scss */
 .button:before {
   content: "";
   display: block;
@@ -2761,14 +2776,14 @@ article.last {
   box-shadow: inset 0px 8px 48px #ddd;
 }
 
-/* line 176, ../sass/_page-portfolio.scss */
+/* line 186, ../sass/_page-portfolio.scss */
 .button:hover {
   text-decoration: none;
   color: #222;
   background: #f5f5f5;
 }
 
-/* line 182, ../sass/_page-portfolio.scss */
+/* line 192, ../sass/_page-portfolio.scss */
 footer p {
   font-size: 80%;
 }
